tests/should_fail/unsupported/issue_1827.stderr
error: Unsupported expression: Pattern matching literals on Int are unsupported by Pearlite. Consider using if-then-else instead.
  --> issue_1827.rs:10:13
   |
10 |             0 => 0,
   |             ^^^^^^^

error: aborting due to 1 previous error

